--- a/asset/translations/en-US.json
+++ b/asset/translations/en-US.json
@@ -4,16 +4,15 @@
         "version": "Version"
     },
     "auth": {
-        "name_input_placeholder": "Email Address",
+        "name_input_placeholder": "Your Name",
         "email_input_placeholder": "Email Address",
         "password_input_placeholder": "Password",
-        "user_input_placeholder": "Your Name",
         "login": {
             "header_text": "Let's You In!",
             "forgot_password": "Forgot Password ?",
             "dont_have_an_account_yet": "Don't have an account yet?",
             "sign_up_hypertext": "Sign up",
-            "or_continue_with": "or_continue_with",
+            "or_continue_with": "or continue with",
             "login_button": "LOGIN"
         },
         "signup": {
